2007-01-18 Anatoly Sokolov <aesok@post.ru>

	* common/macros.inc (__AVR_HAVE_MUL__): Define.
	* libc/misc/mul10.S (__mulhi_const_10): Use __AVR_HAVE_MUL__ instead
	of __AVR_ENHANCED__.

2007-01-15  Dmitry Xmelkov  <dmix@gmail.ru>

	* devtools/table.tar.bz2: New file. This is a test tarball of
	float point functions, table mode test. This is a temporary
	variant, so it is a tarball. See 'table/tst-all.sh' for run
	instruction.

2007-01-14 Anatoly Sokolov <aesok@post.ru>

	* configure.ac: Add tests for the AT90PWM1 support.
	* devtools/gen-avr-lib-tree.sh: Add support for AT90PWM1 device.
	* include/avr/io.h: (Ditto.).
	* include/avr/wdt.h: (Ditto.).
	* include/avr/io90pwm1.h: new file.
	* include/avr/Makefile.am: include new file.
	* doc/api/main_page.dox: Document support for AT90PWM1 device.
	* doc/api/using-tools.dox: (Ditto.)

2007-01-14  Dmitry Xmelkov  <dmix@gmail.ru>

	* bootstrap: Version 2.60 for autoconf is added.

	New version of math library:
	* libm/fplib/{dtostre.S,dtostrf.S,fp_cosinus.S,fp_flashconst.S,
	fp_inverse.S,fp_m_inf.S,fp_merge.S,fp_p_inf.S,fp_powerseries.S,
	fp_split.S,fplib.inc,isinfnan.S,readme.dtostre,readme.fplib,
	readme.strtod,strtod.S}: Removed.
	* libm/fplib/{asmdef.h,copysign.S,fdim.S,fixsfdi.S,floatdisf.S,
	floatunsdisf.S,fma.S,fmax.S,fmin.S,fp32def.h,fp_arccos.S,fp_inf.S,
	fp_mintl.S,fp_mpack.S,fp_negdi.S,fp_norm2.S,fp_powser.S, fp_powsodd.S,
	fp_pscA.S,fp_pscB.S,fp_rempio2.S,fp_round.S,fp_sinus.S,fp_split3.S,
	fp_trunc.S,hypot.S,inverse.S,isfinite.S,isinf.S,isnan.S,ntz.h,
	signbit.S,trunc.S}: New files.
	* libm/fplib/{Files.am,acos.S,addsf3.S,addsf3x.S,asin.S,atan.S,
	atan2.S,ceil.S,cos.S,cosh.S,divsf3.S,divsf3x.S,exp.S,fixsfsi.S,
	floatsisf.S,floor.S,fmod.S,fp_cmp.S,fp_nan.S,fp_zero.S,frexp.S,
	ldexp.S,log.S,log10.S,modf.S,mulsf3.S,mulsf3x.S,negsf2.S,pow.S,
	sin.S,sinh.S,sqrt.S,square.S,tan.S,tanh.S}: Replaced.
	* libc/stdlib/{atof.S,dtoa_conv.h,dtoa_prf.c,dtostre.c,dtostrf.c,
	ftoa_engine.S,ftoa_engine.h,strtod.c}: New files.